# quant_analytics

./: pyproject.toml
01_market_microstructure/: 01_limit_order_book.ipynb
01_market_microstructure/data/thesis/: analysts.parquet  fundamentals.parquet  fundamentals_ai_short.parquet  prices.parquet
8_investment_thesis/: 00_data_pipeline.ipynb  01_hydrogen_long.ipynb  02_ai_valuation.ipynb
